# calamus

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: bitmap.rs  lib.rs  render.rs  split.rs
crates/core/src/format/: metadata.rs  mod.rs  rle.rs  stroke.rs
crates/core/tests/: svg_render.rs
crates/wasm/: Cargo.toml  index.html
crates/wasm/src/: lib.rs
docs/: linestudy.md  note-format.md
testfiles/: complex.note  linestudy.note  linestudy2.note  split_experiment.note  text.note
