[package]
name = "calamus-cli"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Johan Wiskerke"]
description = "CLI tool for parsing and rendering Supernote .note files"

[[bin]]
name = "calamus"
path = "src/main.rs"

[dependencies]
calamus = { path = "../core" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
